# ForkSure

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
codebloodhound/: __init__.py  cli.py  github_client.py  imposter_scanner.py  license_scanner.py  rare_string_scanner.py  readme_scanner.py  reports.py  risk.py
codebloodhound/security/: __init__.py  audit.py  findings.py  osv.py  sast.py  scripts.py  secrets.py
docs/examples/github-actions/: README.md  forksure-evidence.yml  forksure-security-audit.yml
forksure/: __init__.py  cli.py  compare_scanner.py  evidence_packet.py  fork_auditor.py  github_client.py  json_reports.py  license_scanner.py  path_filters.py  reports.py  similarity_scanner.py
forksure/security/: __init__.py  audit.py  dependencies.py  findings.py  osv.py  sast.py  scoring.py  scripts.py  secrets.py
site/: index.html  styles.css
tests/: conftest.py  test_cli_compare.py  test_cli_evidence.py  test_cli_forks.py  test_cli_imposters.py  test_compare_reports.py  test_compare_scanner.py  test_docs_examples.py  test_evidence_packet.py  test_evidence_reports.py  test_github_client.py  test_imposter_reports.py  test_imposter_scanner.py  test_json_reports.py  test_license_scanner.py  test_rare_string_scanner.py  test_readme_scanner.py  test_risk.py  test_security_audit.py  test_security_dependencies.py  test_security_osv.py  test_security_sast.py  test_security_scoring.py  test_security_scripts.py  test_security_secrets.py  test_similarity_scanner.py
