[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "codebloodhound"
version = "0.1.0"
description = "GitHub repository provenance, fork audit, imposter repo, and license drift scanner."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
codebloodhound = "codebloodhound.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
